--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">deplanform</div>
+        <div class="title">智能装备数据平台</div>
       </div>
     </div>
   </body>
